# sairy

./: .clang-format  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUGS  CMakeLists.txt  LICENSE  README  README.md  SETUP_ENV.sh  meson.build
cmake/: FindLibClang.cmake  features.cmake
contrib/: casefold.py  textbook-mode.el  tstyle-mode.el
doc/: lexicon.tb  sairy.1.textbook  textbook-book.tbi  textbook-exprlang.tbi  textbook-fo.tbi  textbook-markup.tbi  textbook.1.textbook  textbook.tb
examples/: baerong-namu.1.textbook  bar.h  bibref.7.textbook  comments.hpp  comments.tstyle  comments2.hpp  foo.h  format-output.scm  gaz.cpp  intro.md  intro.textbook  intro.tstyle  nodelist.templ  nodelist.tstyle  opt-params.scm  style.templ  style.tstyle  test.templ
include/json_spirit/: json_spirit_reader_template.h  json_spirit_writer_template.h
share/: meson.build
share/sairy/lib/sairy/: dsssl.scm  dsssl.sld  fo.scm  init.scm  lang.scm  macros.scm  macros.sld  nodelist.scm  process.scm  query.scm  string-lib.scm  string-lib.sld  type-of.scm  type-of.sld
share/sairy/lib/srfi/: 88.sld  89.sld
share/sairy/lib/srfi/88/: keywords.scm
share/sairy/lib/srfi/89/: opt-params.scm
share/sairy/tex/: tbmulticol.sty
share/sairy/textbook/spec/: book.spec  common.spec  manpage.spec
share/sairy/tstyle/: admon.tstyle  bibref.tstyle  book-contents.tstyle  book-index.tstyle  book-title.tstyle  book.tstyle  common.tstyle  decl.tstyle  mandoc.tstyle  manpage.tstyle  para.tstyle
share/textbook/lib/srfi/: 28.sld  89.sld
share/textbook/lib/srfi/28/: format.scm
share/textbook/lib/srfi/89/: opt-params.scm
share/textbook/lib/textbook/: characteristics.scm  default.scm  dsssl.scm  dsssl.sld  fo.scm  init.scm  lang.scm  macros.scm  macros.sld  nodelist.scm  process.scm  query.scm  string-collate.scm  string-collate.sld  string-lib.scm  string-lib.sld  trie.scm  trie.sld  type-of.scm  type-of.sld
share/textbook/spec/: book.spec  common-inline.spec  common.spec  doc.spec  frontmatter.spec  info.spec  ling.mod  lit-para.spec  manpage.spec  para.spec  ref.spec  section.spec  tech.spec  vortaro.spec
share/textbook/tex/: tbmulticol.sty  textbook.cls
share/textbook/tstyle/: admon.tstyle  bibref.tstyle  book-contents.tstyle  book-debug.tstyle  book-def.tstyle  book-grammar.tstyle  book-html-main.tstyle  book-html.tstyle  book-index.tstyle  book-section.tstyle  book-tex-main.tstyle  book-tex.tstyle  book-title.tstyle  book.tstyle  common-html.tstyle  common.tstyle  example.tstyle  html.tstyle  image.tstyle  index.tstyle  info.tstyle  inline.tstyle  lexicon.tstyle  manpage-html.tstyle  manpage-tex.tstyle  manpage.tstyle  para.tstyle  ref.tstyle  root.tstyle  vortaro-html.tstyle  vortaro-tex.tstyle  vortaro.tstyle
src/: CMakeLists.txt  abstract-processor.cpp  abstract-processor.hpp  abstract-processor.ipp  casefold.cpp  casefold.hpp  colors.cpp  colors.hpp  config.hpp.in  config.hpp.in-meson  cpp-comments.cpp  cpp-comments.hpp  cpp-lang.cpp  cpp-lang.hpp  cpp-scanner.cpp  cpp-scanner.hpp  debug-processor.cpp  debug-processor.hpp  fo-processor.hpp  fo.cpp  fo.hpp  fos.cpp  fos.hpp  html-processor.cpp  html-processor.hpp  html-types.hpp  html-writer.cpp  html-writer.hpp  lexicon-scanner.cpp  lexicon-scanner.hpp  main.cpp  md-scanner.cpp  md-scanner.hpp  meson.build  nodeclass.cpp  nodeclass.hpp  nodelist.cpp  nodelist.hpp  nodes.cpp  nodes.hpp  (+34 more)
src/estd/: memory.hpp  type_traits.hpp
src/test/: CMakeLists.txt  meson.build  parser_test.cpp  tst_main.cpp  tst_nodelist.cpp  tst_nodes.cpp  tst_nodeutils.cpp  tst_textbook_parser.cpp  tst_utils.cpp
src/test/data/: a.js  a.textbook  at.js  at.textbook  cpp-class1.hpp  cpp-class1.js  cpp-class2.hpp  cpp-class2.js  cpp-class3.hpp  cpp-class3.js  cpp-class4.hpp  cpp-class4.js  cpp-class5.hpp  cpp-class5.js  cpp-enum1.hpp  cpp-enum1.js  cpp-enum2.hpp  cpp-enum2.js  cpp-enum3.hpp  cpp-enum3.js  cpp-fun1.hpp  cpp-fun1.js  cpp-fun2.hpp  cpp-fun2.js  cpp-ns1.hpp  cpp-ns1.js  cpp-struct1.hpp  cpp-struct1.js  cpp-struct2.hpp  cpp-struct2.js  cpp-struct3.hpp  cpp-struct3.js  cpp-struct4.hpp  cpp-struct4.js  cpp-template2.hpp  cpp-template2.js  cpp-typedef1.hpp  cpp-typedef1.js  cpp-typedef2.hpp  cpp-typedef2.js  (+44 more)
